--- a/README
+++ b/README
@@ -1,13 +1,4 @@
-TODO:
+There's a leak when sim finishes with no deaths, phi_arr isn't freed.
 
-//////Write a func to calculate elapsed time.
-//////Use this func to write another func to display status messages.
-	[timestamp in ms] [p_nbr] has [done something]
+Lots of invalid reads/writes when someone dies. ./philo 5 800 200 200 1
 
-TODO:
-////Create threads
-
-10/1
-TODO:
-	write time correctly
-	change algo cond from while(1) to real cond (as long as nobody died, etc.)
